fix(CodeBlock): Fix dark mode issues
Kayla's team is working out a more PatternFly-compliant system for user messages. This not yet ready. However, she approved this as a short-term gap fix so we can address the bug Rohit's team filed. Rohit's team was seeing problems with inline code and also block-level code headings on dark mode. This should address both for now.

Fixes https://github.com/patternfly/virtual-assistant/issues/137

--- a/packages/module/src/Message/CodeBlockMessage/CodeBlockMessage.scss
+++ b/packages/module/src/Message/CodeBlockMessage/CodeBlockMessage.scss
@@ -19,7 +19,7 @@
     --pf-v6-c-code-block__header--PaddingBlockEnd: var(--pf-t--global--spacer--sm);
     --pf-v6-c-code-block__header--PaddingInlineStart: var(--pf-t--global--spacer--md);
     --pf-v6-c-code-block__header--PaddingInlineEnd: var(--pf-t--global--spacer--md);
-    color: var(--pf-t--global--text--color--inverse);
+    color: var(--pf-t--color--white); // same in light + dark theme
 
     .pf-v6-c-code-block__actions {
       width: 100%;
@@ -27,6 +27,7 @@
 
     .pf-chatbot__message-code-block-language {
       text-transform: uppercase;
+      font-family: var(--pf-t--global--font--family--body);
     }
 
     .pf-v6-c-code-block__actions-item {
